# ai-agent-trader

./: .env.example  Makefile  README.md  design.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: backtest_analysis.py  daily_feedback.py  llm_stream.py
backend/app/backtesting/: __init__.py  engine.py
backend/app/llm/: __init__.py  client.py
backend/app/llm/analysis/: __init__.py  enhanced_technical_analyzer.py  trend_analyzer.py  trend_benchmark.py
backend/app/llm/strategies/: __init__.py  base.py  llm_strategy.py
backend/app/llm/strategies/prompt/: traditional_strategy.md
backend/app/utils/: __init__.py  backtest_logger.py  fetcher.py  indicators.py  stock_data.py  unrealized_pnl_tracker.py
backend/app/utils/yfinance_utils/: __init__.py  exceptions.py  models.py  utils.py
backend/backend/data/: backtest_logs.db
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/analysis/: BacktestResultsWithAnalysis.tsx  DayAnalysis.tsx
frontend/src/components/charts/: BacktestChart.tsx  SimpleTradingViewChart.tsx
frontend/src/components/llm/: StreamingLLMRunner.tsx
frontend/src/components/ui/: checkbox.tsx  separator.tsx  skeleton.tsx
frontend/src/types/: index.ts
